--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     Redes sociales
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<ingresa_user>">Red social: @tu-usuario</a></li>
+                    <li><a href="https://instagram.com/Benja">Red social: @tu-usuario</a></li>
                     <li><a href="https://linkedin.com/in/<ingresa_user>">Red social: @tu-usuario</a></li>
                 </ul>    
             </section>
